--- a/TestApp.Core/TestApp.Core.csproj
+++ b/TestApp.Core/TestApp.Core.csproj
@@ -5,10 +5,15 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <TargetFramework>netstandard1.6</TargetFramework>
+    <TargetFramework>netstandard1.4</TargetFramework>
     <ApplicationIcon />
     <OutputTypeEx>library</OutputTypeEx>
     <StartupObject />
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Autofac" Version="4.6.0" />
+    <PackageReference Include="ReactiveProperty" Version="4.0.0-pre3" />
+  </ItemGroup>
 
 </Project>
